<resources>
    <string name="app_name">ARSQC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_web_display">WebDisplay</string>
    <string name="data_vis">000000000</string>
    <string name="end_recording">End Recording</string>
    <string name="start_recording">Start Recording</string>
    <string name="pause_recording">Pause Recording</string>
    <string name="post_files">Post Files</string>
    <string name="status">Status</string>
    <string name="car_condition">Car Condition</string>
    <string name="_100h">100H</string>
    <string name="_15hz">15Hz</string>
    <string name="_50hz">50Hz</string>
    <string name="_5hz">5Hz</string>
    <string name="bad_road">Bad Road</string>
    <string name="car_age">Car Age</string>
    <string name="car_type">Car Type</string>
    <string name="fair_road">Fair Road</string>
    <string name="good_road">Good Road</string>
    <string name="welcome">Welcome</string>
    <string name="menu_action_setting">Setting</string>
    <string name="menu_record_page">Record Page</string>
    <string name="action_web_view">Web View</string>
    <string name="action_home">Home</string>
</resources>
