<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/testX"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_recording"
        android:layout_alignStart="@+id/end_recording"
        android:layout_below="@+id/end_recording"
        android:layout_marginTop="27dp"
        android:text="@string/data_vis" />

    <ToggleButton
        android:id="@+id/start_stop_toggle"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_recording"
        android:layout_alignStart="@+id/end_recording"
        android:layout_below="@+id/noticeView"
        android:layout_marginTop="15dp"
        android:checked="false"
        android:onClick="startStopToggleClicked"
        android:textOff="@string/start_recording"
        android:textOn="@string/pause_recording" />

    <Button
        android:id="@+id/end_recording"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_stop_toggle"
        android:layout_centerHorizontal="true"
        android:onClick="endButtonClicked"
        android:text="@string/end_recording" />


    <TextView
        android:id="@+id/noticeView"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_stop_toggle"
        android:layout_alignStart="@+id/start_stop_toggle"
        android:layout_below="@+id/toolbar2"
        android:layout_marginTop="17dp"
        android:text="@string/status" />

    <Button
        android:id="@+id/upload"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/testX"
        android:layout_alignStart="@+id/testX"
        android:layout_below="@+id/testX"
        android:layout_marginTop="61dp"
        android:background="@drawable/red_button_sld"
        android:onClick="testButton"
        android:text="@string/post_files"
        android:textColor="@color/white" />


</RelativeLayout>